Revert "make reset text"
This reverts commit 65fbf05404b2d5775b83647de541b9bc12a9258b.

--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/EFGH/Documents/GitHub/FantasticodeBuild2;C:/Users/EFGH/Documents/GitHub/FantastocodeBuild;C:/Users/EFGH/Documents/GitHub/FantastiCode/Build4;C:/Users/EFGH/Documents/GitHub/FantastiCode/WebGL Builds;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/EFGH/Documents/GitHub/FantastiCode/Build4;C:/Users/EFGH/Documents/GitHub/FantastiCode/WebGL Builds;;;;;;;;\"}"
             }
         ]
     }
